added a note to index.html that I now know how to solve the styling problem (but don't have time right now

--- a/Module1/index.html
+++ b/Module1/index.html
@@ -32,6 +32,8 @@
 	to set classes for the input box, the button and paragraph.  But I never got it to work.  
 	Not sure why.
 
+	update: I found the problem.  I had put styles.css in the wrong folder. That was it.  But it's too late to fix.  The assignment is due.  But at least I know how to fix.
+
 	   -->
 
 </body>
