--- a/Module 3/misc/index.html
+++ b/Module 3/misc/index.html
@@ -27,7 +27,23 @@
 			 <found-items-directive
 			 items="ndctrl.foundItems" 
 			 on-remove="ndctrl.removeItem(index)">  
-			 </found-items-directive>	
+			 	<ul>
+					<li ng-repeat="item in ndctrl.foundItems">     
+					{{item.name}},{{item.short_name}},{{item.description}}
+					<button ng-click="ndctrl.removeItem({index: $index});">  Don't want this one!  </button>
+					</li>
+				</ul>
+
+			<div ng-if="ndctrl.emptysearch" class="???"> You didn't enter a search term. </div>
+
+			<div ng-if="ndctrl.removedsomething && ndctrl.foundItems==0" class="???"> Picky, Picky!  Try something else.  </div>
+
+			<div ng-if="ndctrl.searched && ndctrl.foundItems==0" class="???"> Sorry, we couldn't find a match.  </div>
+
+
+
+
+			 </found-items-directive>
 		</div>
 
 	</body>
