ready to try loading the form state for Module 5

--- a/Module5/index.html
+++ b/Module5/index.html
@@ -51,7 +51,7 @@
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
               <li>
-                <a href="#">
+                <a ui-sref="public.signup">
                   <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Sign Up! </a>
               </li>
               <li>
