made a change to userservice to see if that helps.

--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -2,7 +2,7 @@
 <h2> Sign Up </h2>
 
 <h3> To sign up, complete the form and submit. </h3>
-{{formctrl.user}}
+{{formCtrl.user}}
 
 <form name="signup" novalidate>
 	<input type="text" 
