--- a/Module5/index.html
+++ b/Module5/index.html
@@ -55,7 +55,7 @@
                   <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> Sign Up! </a>
               </li>
               <li>
-                <a href="#">
+                <a href="public.myinfo">
                   <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> My Info </a>
               </li>
               <li id="phone" class="hidden-xs">
