had to correct the path to the surpised lemur image

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -15,6 +15,6 @@
 <div ng-if="!infoctrl.registered">
 	You haven't signed up yet!  Go and <a ui-sref="public.signup"> sign up </a> right away!!
 
-	<img src="images/menu/surpised.jpg" alt="surpised ring-tail lemur width='612' height='408' ">
+	<img src="images/surpised.jpg" alt="surpised ring-tail lemur width='612' height='408' ">
 </div>
 
