I had forgotten to include script tags for my controllers and services in index.html

--- a/Module5/index.html
+++ b/Module5/index.html
@@ -133,6 +133,11 @@
     <script src="src/public/menu-items/menu-items.controller.js"></script>
     <script src="src/public/menu-item/menu-item.component.js"></script>
 
+    <script src="src/public/signup/form.ctrl.js"></script>
+    <script src="src/public/user.service.js"></script>
+    <script src="src/public/registration/myinfo.controller.js"></script>
+
+
     <!-- ADMIN SITE -->
 
     <!--Application files -->
