working on the form

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -13,7 +13,8 @@
 
 
 <div ng-if="!infoctrl.registered">
-	You haven't signed up yet!  Go and <a ui-sref="public.signup"> sign up </a> right away!!
+	<h2> You haven't signed up yet!  <br>
+		Go and <a ui-sref="public.signup"> sign up </a> right away!! </h2>
 
 	<img src="images/surprised.jpg" alt="surpised ring-tail lemur width='612' height='408' ">
 </div>
