--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -60,7 +60,8 @@
 		<br>
 
 	<button ng-disabled="signup.$invalid" ng-click = "formctrl.store(formctrl.user)">Submit</button>
-
+	formctrl.store: {{formctrl.store}} <br>
+	formctrl.user: {{formctrl.user}}
 
 	<span ng-if = "(signup.firstname.$error.touched && signup.lastname.$error.touched && 
 				signup.email.$error.touched && signup.phone.$error.touched && 
