realized I had misspelled the label for my controller in the html for the userform state

--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -4,7 +4,7 @@
 <h2> Sign Up </h2>
 
 <h3> To sign up, complete the form and submit. </h3>
-{{formCtrl.user}}
+{{formctrl.user}}
 
 <form name="signup" novalidate id="userform">
 	<input type="text" 
