--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -57,7 +57,8 @@
 
 	<button ng-disabled="signup.$invalid" ng-click = "formctrl.store()">Submit</button>
 	formctrl.store: {{formctrl.stored}} <br>
-	formctrl.user: {{formctrl.user}}
+	formctrl.user: {{formctrl.user}} <br>
+	test <br>
 	{{formctrl.menuItems}}
 	<span ng-if = "(signup.firstname.$error.touched && signup.lastname.$error.touched && 
 				signup.email.$error.touched && signup.phone.$error.touched && 
