tried taking away the quotes from infoctr.imagepath

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -8,7 +8,7 @@
 	phone:  {{infoctrl.userdata.phone}} <br>
 	favorite dish:  {{infoctrl.userdata.favdishinfo.name }} <br>
 	{{infoctrl.userdata.favdishinfo.description }} <br>
-	<img src="infoctrl.imagepath">
+	<img src=infoctrl.imagepath>
 </div>
 
 
