--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -1,4 +1,5 @@
 
+{{infoctrl.imagepath}}
 
 <div ng-if="infoctrl.registered">  
 	<h2>  Registered Information for {{infoctrl.userdata.firstname}}! </h2>
