using ng-scr rather than scr in the img tag

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -9,7 +9,7 @@
 	phone:  {{infoctrl.userdata.phone}} <br>
 	favorite dish:  {{infoctrl.userdata.favdishinfo.name }} <br>
 	{{infoctrl.userdata.favdishinfo.description }} <br>
-	<img src=infoctrl.imagepath>
+	<img ng-src="{{infoctrl.imagepath}}">
 </div>
 
 
