changing some styling on the buttons

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -8,7 +8,7 @@
 	{{infoctrl.userdata.favdishinfo.description }} <br>
 	<img ng-src="{{infoctrl.imagepath}}">  
 	<span> To clear your information, click the clear button.
-		<button ng-click="infoctrl.reset()"> clear  </button>
+		<button ng-click="infoctrl.reset()" class="button"> clear  </button>
 	</span>
 </div>
 
