put in a break tag

--- a/Module5/src/public/registration/myinfo.html
+++ b/Module5/src/public/registration/myinfo.html
@@ -6,7 +6,7 @@
 	phone:  {{infoctrl.userdata.phone}} <br>
 	favorite dish:  {{infoctrl.userdata.favdishinfo.name }} <br>
 	{{infoctrl.userdata.favdishinfo.description }} <br>
-	<img ng-src="{{infoctrl.imagepath}}">  
+	<img ng-src="{{infoctrl.imagepath}}">  <br>
 	<span> To clear your information, click the clear button.
 		<button ng-click="infoctrl.reset()" class="button"> clear  </button>
 	</span>
