working on more validation in the input form

--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -31,7 +31,7 @@
 		placeholder="email address"
 		ng-model="formctrl.user.email" 
 		required class='inputbox'
-		pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,4}$">
+		pattern="^[a-z0-9._%+-]+@[a-z0-9.-]">
 		<span ng-if="signup.firstname.touched && signup.firstname.valid"> &#x2713; </span>
 
 		<br>
