--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -4,8 +4,7 @@
 <h2> Sign Up </h2>
 
 <h3> To sign up, complete the form and submit. </h3>
-<h4> (for "favorite menu item", enter the code (e.g. 'CU23', etc.)
-	<br> Codes can be found on the menu pages.) </h4>
+<h4> [For "favorite menu item", enter the code (e.g. 'CU23', etc.)Codes can be found on the menu pages.] </h4>
 
 <form name="signup" novalidate id="userform">
 	<input type="text" 
