trying to match phone number with regex using pattern attribute

--- a/Module5/src/public/signup/signup.html
+++ b/Module5/src/public/signup/signup.html
@@ -38,7 +38,8 @@
 		name="phone" 
 		placeholder="phone number"
 		ng-model="formctrl.user.phone"
-		required class='inputbox'>
+		required class='inputbox'
+		pattern="^(\+0?1\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$">
 		<span ng-if="signup.firstname.touched && signup.firstname.valid"> &#x2713; </span>
 
 		<br>
